--- a/templates/index.html
+++ b/templates/index.html
@@ -625,9 +625,9 @@
                 <div class="ul-inner-container">
                     <div class="ul-section-heading justify-content-center text-center">
                         <div>
-                            <span class="ul-section-sub-title text-white">Make an Enquiry</span>
-                            <h2 class="ul-section-title text-white">Sign Up to Newsletter</h2>
-                            <p class="text-white-50 mb-0">Stay updated with our latest news, offers, and services. Fill out the form below and we'll get back to you promptly.</p>
+                            <span class="ul-section-sub-title text-white">Get in Touch</span>
+                            <h2 class="ul-section-title text-white">Contact Us</h2>
+                            <p class="text-white-50 mb-0">Have a question or need assistance? Fill out the form below and our team will respond as soon as possible.</p>
                         </div>
                     </div>
 
