--- a/templates/shop.html
+++ b/templates/shop.html
@@ -17,6 +17,23 @@
 
     <!-- custom CSS -->
     <link rel="stylesheet" href="/static/css/style.css">
+    
+    <!-- page-specific image ratio fix for product grid -->
+    <style>
+      .ul-product .ul-product-img {
+        aspect-ratio: 1 / 1; /* change to 4 / 3 or 16 / 9 if preferred */
+        width: 100%;
+        overflow: hidden;
+        background: #fff;
+        display: block;
+      }
+      .ul-product .ul-product-img img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain; /* keep natural aspect without cropping */
+        display: block;
+      }
+    </style>
 </head>
 
 <body>
@@ -53,7 +70,7 @@
                                     </div>
 
                                     <div class="ul-product-img">
-                                        <img src="{{ product.image_path }}" alt="{{ product.image_alt }}">
+                                        <img src="{{ product.image_path }}" alt="{{ product.image_alt }}" loading="lazy" decoding="async" onerror="this.onerror=null; this.src='/static/images/logo.png'">
                                     </div>
 
                                     <div class="ul-product-txt">
